--- a/sass/blocks/product-preview.scss
+++ b/sass/blocks/product-preview.scss
@@ -10,6 +10,7 @@
   @media (min-width: $desktop-width) {
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 52px;
   }
 
   &__item {
@@ -18,38 +19,54 @@
 
     @media (min-width: $tablet-width) {
       display: flex;
-      align-items: flex-start;
-      margin-bottom: 52px;
+      margin-bottom: 46px;
     }
 
     @media (min-width: $desktop-width) {
       flex-direction: column;
+      margin: 0;
+      width: 316px;
     }
   }
 
   &__wrapper {
+    padding-top: 22px;
+    padding-right: 30px;
+    padding-left: 29px;
+
+    flex-grow: 1;
+
+
     @media (min-width: $tablet-width) {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      min-height: 332px;
+      padding-top: 25px;
 
       flex-wrap: wrap;
+
+      &:hover {
+        box-shadow: 0 6px 10px rgba(0,0,0,0.1);
+      }
+
+      &:active {
+        box-shadow: 0 3px 5px rgba(0,0,0,0.1);
+      }
     }
 
     @media (min-width: $desktop-width) {
-      min-height: 195px;
+      padding-top: 20px;
+      padding-right: 33px;
+      padding-left: 27px;
     }
   }
 
   &__info {
-    margin-top: 22px;
-    margin-left: 28px;
     padding-bottom: 20px;
 
-    @media (min-width: $tablet-width) {
-      margin-top: 27px;
-      width: 240px;
+    @media (min-width: $desktop-width) {
+      padding: 0;
+      padding-bottom: 12px;
     }
   }
 
@@ -63,22 +80,28 @@
       width: 316px;
       height: 462px;
     }
+    &-link {
+      flex-shrink: 0;
+    }
   }
 
   &__buy {
     position: relative;
     display: flex;
     justify-content: space-between;
-    margin-left: 28px;
     padding-top: 22px;
     padding-bottom: 26px;
-    width: 205px;
     border-top: 1px solid $grey;
 
     flex-wrap: wrap;
 
     @media (min-width: $tablet-width) {
-      width: 275px;
+      padding-top: 25px;
+      padding-bottom: 30px;
+      // width: 275px;
+    }
+
+    @media (min-width: $desktop-width) {
     }
   }
 
@@ -117,6 +140,7 @@
     line-height: 24px;
 
     @media (min-width: $tablet-width) {
+      padding-bottom: 5px;
       font-size: 20px;
       line-height: 24px;
     }
@@ -151,8 +175,4 @@
       opacity: 0.3;
     }
   }
-}
-
-.product-preview__title-icon {
-  position: absolute;
 }
