--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -2,7 +2,8 @@
   margin-top: 64px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 80px;
+    margin: 0;
+    margin-bottom: 6px;
     padding-top: 12px;
   }
 
@@ -11,10 +12,11 @@
 
     @media (min-width: $tablet-width) {
       margin-bottom: 74px;
+      margin-left: -3px;
     }
 
     @media (min-width: $desktop-width) {
-      margin-top: 75px;
+      margin-top: 48px;
     }
   }
 
@@ -37,8 +39,10 @@
     padding-bottom: 53px;
 
     @media (min-width: $tablet-width) {
-      margin-right: 60px;
-      padding-bottom: 80px;
+      margin-right: 63px;
+      margin-bottom: 80px;
+      padding: 0;
+      padding-top: 30px;
       width: 270px;
       font-size: 20px;
       line-height: 22px;
@@ -72,11 +76,35 @@
       margin-right: 80px;
     }
   }
-}
 
-.advantages__item--icon {
-  position: absolute;
-  top: -25px;
-  left: 7px;
-  fill: $downy;
+  &__icon {
+    position: absolute;
+    top: -25px;
+    left: 7px;
+    fill: $downy;
+
+    &--money {
+      top: -23px;
+      left: 0;
+    }
+
+    &--heart {
+      top: -18px;
+    }
+
+    &--ball {
+      top: -21px;
+      left: 3px;
+    }
+
+    &--rocket {
+      top: -19px;
+      left: -6px;
+    }
+
+    &--gift {
+      top: -22px;
+      left: 3px;
+    }
+  }
 }
