--- a/sass/titles.scss
+++ b/sass/titles.scss
@@ -32,52 +32,88 @@
     padding-top: 70px;
     min-height: 283px;
     background: url("../img/hero-mobile@1x.jpg") no-repeat 50% 18%;
+    background-color: $alabaster;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/hero-mobile@2x.jpg")no-repeat 50% 0;
+    }
+
 
     @media (min-width: $tablet-width) {
-      padding-top: 0;
-      padding-bottom: 324px;
+      padding-top: 128px;
+      padding-bottom: 374px;
+      background: url("../img/hero-tablet@1x.jpg")no-repeat 50% 0;
+
+
+
+      @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+        background: url("../img/hero-tablet@2x.jpg")no-repeat 50% 0;
+        background-size: 1150px 746px;
+      }
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-bottom: 360px;
+      background: url("../img/hero-desktop@1x.jpg")no-repeat 50% 0;
+      background-size: 1250px 746px;
+
+      @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+        background: url("../img/hero-desktop@2x.jpg")no-repeat 50% 0;
+      }
     }
   }
 
   & .page-title__container--catalog,
   .page-title__container--form {
     padding-top: 70px;
-    padding-bottom: 74px;
+    padding-bottom: 78px;
+
+    @media (min-width: $tablet-width) {
+      padding-bottom: 92px;
+    }
+
+    @media(min-width: $desktop-width) {
+      padding-bottom: 113px;
+    }
   }
 
 
   &--index {
     margin: 0 auto;
     border-top: 1px solid $grey;
-    background-color: $seashell;
+    background-color: $alabaster;
     background-position: center;
     background-repeat: no-repeat;
 
 
     @media (min-width: $tablet-width) {
       margin-top: -44px;
-      margin-bottom: 50px;
-      padding-top: 128px;
+      // padding-top: 128px;
     }
 
     @media (min-width: $desktop-width) {
-      margin-bottom: 34px;
-      padding-top: 130px;
+      // margin-bottom: 34px;
+
+      // padding-top: 30px;
     }
   }
 
   &--catalog {
-    margin-bottom: 35px;
+    margin-bottom: 32px;
     border-top: 1px solid $grey;
     background-color: $seashell;
 
     @media (min-width: $tablet-width) {
       margin-top: -44px;
-      margin-bottom: 85px;
+      margin-bottom: 68px;
+      background-image: url(../img/bg-zigzag-fill.svg);
+      background-position: 0 bottom;
+      background-size: auto 23px;
+      background-repeat: repeat-x;
     }
 
     @media (min-width: $desktop-width) {
-      margin-bottom: 155px;
+      margin-bottom: 117px;
     }
   }
 
@@ -88,6 +124,10 @@
     @media (min-width: $tablet-width) {
       margin-top: -44px;
       margin-bottom: 34px;
+      background-image: url(../img/bg-zigzag-fill.svg);
+      background-position: 0 bottom;
+      background-size: auto 23px;
+      background-repeat: repeat-x;
     }
   }
 }
