--- a/sass/blocks/product-menu.scss
+++ b/sass/blocks/product-menu.scss
@@ -12,7 +12,7 @@
       left: 0;
       width: 100%;
       height: 15px;
-      background-image: url(../img/bg-zigzag-fill.svg);
+      background-image: url("../img/bg-zigzag-fill.svg");
       background-position: -4px top;
       background-size: auto 23px;
       background-repeat: repeat-x;
