--- a/sass/blocks/modal-order.scss
+++ b/sass/blocks/modal-order.scss
@@ -68,6 +68,10 @@
     }
 
     &:hover {
+      border: 2px solid $grey;
+    }
+
+    &:active {
       border: 2px solid $downy;
     }
 
@@ -94,4 +98,8 @@
     font-size: 17px;
     line-height: 16px;
   }
+}
+
+.modal-show {
+  display: flex;
 }
