--- a/sass/blocks/modal-order.scss
+++ b/sass/blocks/modal-order.scss
@@ -1,8 +1,13 @@
+.modal {
+  display: none;
+}
+
 .modal-order {
   position: fixed;
   top: 50%;
   left: 50%;
-  display: none;
+  z-index: 100;
+  // display: none;
   margin-top: 40px;
   margin-bottom: 40px;
   padding-bottom: 50px;
@@ -102,4 +107,15 @@
 
 .modal-show {
   display: flex;
+}
+
+.modal__overlay {
+  position: absolute;
+  z-index: 100;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(#ffffff, 0.9);
+  cursor: pointer;
+  transform: translate(-50%, -50%);
 }
