--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -5,7 +5,7 @@
   @media (min-width: $tablet-width) {
     margin: 0;
     margin-top: 23px;
-    margin-bottom: 60px;
+    margin-bottom: 57px;
   }
 
   @media (min-width: $desktop-width) {
@@ -35,11 +35,13 @@
     margin-left: auto;
 
     flex-shrink: 0;
+    flex-wrap: wrap;
 
     @media (min-width: $tablet-width) {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      margin-bottom: 5px;
 
       flex-wrap: wrap;
     }
@@ -54,7 +56,7 @@
     order: 1;
 
     @media (min-width: $desktop-width) {
-      padding-top: 27px;
+      padding-top: 34px;
     }
   }
 
@@ -65,6 +67,8 @@
     margin-bottom: 30px;
     padding: 0;
     letter-spacing: 0;
+
+    flex-wrap: wrap;
 
     @media (min-width: $tablet-width) {
       margin-bottom: 50px;
@@ -127,6 +131,8 @@
 
     @media (min-width: $tablet-width) {
       width: 230px;
+      font-size: 17px;
+      line-height: 20px;
     }
 
     @media (min-width: $desktop-width) {
@@ -200,6 +206,8 @@
     }
 
     @media (min-width: $tablet-width) {
+      margin: 0;
+      margin-top: 38px;
       margin-bottom: 50px;
       font-size: 43px;
       line-height: 50px;
