--- a/sass/blocks/coopyright.scss
+++ b/sass/blocks/coopyright.scss
@@ -8,6 +8,7 @@
 
   &__link {
     display: flex;
+
     align-items: center;
     padding-right: 20px;
     padding-left: 40px;
@@ -18,6 +19,8 @@
     font-size: 19px;
     font-family: $open-sans;
     line-height: 18px;
+
+    flex-wrap: wrap;
 
     &:hover .coopyright__icon {
       fill: #46c1ae;
