--- a/sass/blocks/form-order.scss
+++ b/sass/blocks/form-order.scss
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column;
 
+
     @media (min-width: $tablet-width) {
       padding-top: 60px;
       padding-bottom: 16px;
@@ -60,7 +61,7 @@
     &--add {
       @media (min-width: $tablet-width) {
         margin-bottom: 40px;
-        padding-top: 30px;
+        padding-top: 35px;
       }
 
       @media (min-width: $desktop-width) {
@@ -278,6 +279,12 @@
       font-size: 18px;
       line-height: 16px;
     }
+
+    @media (min-width: $desktop-width) {
+      padding-bottom: 13px;
+      font-size: 17px;
+      line-height: 20px;
+    }
   }
 
   &__footer {
@@ -352,11 +359,12 @@
 
     @media (min-width: $tablet-width) {
       margin: 0;
-      padding-top: 47px;
+      padding-top: 44px;
       padding-left: 135px;
     }
 
     @media (min-width: $desktop-width) {
+      padding-top: 42px;
       padding-left: 80px;
     }
   }
