--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -7,6 +7,7 @@
 
   @media (min-width: $tablet-width) {
     display: flex;
+
     flex-direction: row;
 
     flex-wrap: wrap;
@@ -34,6 +35,8 @@
   &__item {
     display: flex;
     border-top: 1px solid $grey;
+
+    flex-wrap: wrap;
 
     &:hover .user-menu__link--icon {
       opacity: 1;
