--- a/sass/blocks/product-menu.scss
+++ b/sass/blocks/product-menu.scss
@@ -48,6 +48,8 @@
     @media (min-width: $tablet-width) {
       display: flex;
       flex-direction: row;
+
+      flex-wrap: wrap;
     }
   }
 
@@ -70,6 +72,7 @@
     padding-bottom: 30px;
     padding-left: $mobile-padding;
     width: 100%;
+    background-color: $downy;
     color: $white;
     text-decoration: none;
     letter-spacing: 0;
@@ -79,14 +82,21 @@
     line-height: 24px;
 
     &:hover {
-      position: relative;
-      bottom: 5px;
-      box-shadow: 0 5px 0 0 $downy;
+      margin-top: -5px;
+      padding-bottom: 35px;
     }
 
+    &:hover .product-menu__icon {
+      top: 20px;
+      opacity: 0.7;
+    }
 
     &:active {
       color: rgba(255,255,255,0.3);
+    }
+
+    &:active .product-menu__icon {
+      opacity: 0.3;
     }
 
     @media (min-width: $tablet-width) {
@@ -136,5 +146,8 @@
         right: 33px;
       }
     }
+  }
+  &__title {
+    @include visually-hidden();
   }
 }
