--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -8,7 +8,6 @@
   }
 
   @media (min-width: $desktop-width) {
-    // margin-bottom: 45px;
     padding-bottom: 73px;
   }
 
@@ -16,6 +15,8 @@
     position: relative;
     display: flex;
     flex-direction: column;
+
+    flex-wrap: wrap;
 
     @media (min-width: $tablet-width) {
       flex-direction: row;
@@ -32,6 +33,11 @@
       background-image: url("../img/review@1x.jpg");
       background-position: 50px 5px;
       background-repeat: no-repeat;
+      @media (min-width: $tablet-width) and (min-resolution: 144dpi),
+      (min-width: $tablet-width) and (min-resolution: 1.5dppx) {
+        background-image: url("../img/review@2x.jpg");
+        background-size: 350px 457px;
+      }
 
       &::after {
         position: absolute;
@@ -119,7 +125,9 @@
 
   &__nav {
     display: flex;
+
     margin-bottom: 37px;
+    flex-wrap: wrap;
 
     @media (min-width: $tablet-width) {
       margin-top: -85px;
@@ -177,6 +185,8 @@
 
     @media (min-width: $desktop-width) {
       margin-top: 84px;
+      font-size: 17px;
+      line-height: 20px;
     }
   }
 }
