--- a/sass/blocks/form-order.scss
+++ b/sass/blocks/form-order.scss
@@ -156,8 +156,8 @@
       }
 
       @media (min-width: $desktop-width) {
-        top: 60px;
-        right: 0;
+        top: 59px;
+        right: 8px;
       }
     }
 
@@ -173,8 +173,8 @@
       }
 
       @media (min-width: $desktop-width) {
-        top: 12px;
-        right: 0;
+        top: 16px;
+        right: 4px;
       }
     }
   }
