--- a/sass/global.scss
+++ b/sass/global.scss
@@ -18,7 +18,7 @@ body {
 
 body {
   min-width: $mobile-width;
-  font-family: $open-sans, "Arial", sans-serif;
+  font-family: $open-sans;
 }
 
 img {
