--- a/sass/blocks/modal-order.scss
+++ b/sass/blocks/modal-order.scss
@@ -2,12 +2,30 @@
   display: none;
 }
 
+.modal-show {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.modal__overlay {
+  position: absolute;
+  z-index: 100;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba($white, 0.9);
+}
+
 .modal-order {
   position: fixed;
   top: 50%;
   left: 50%;
   z-index: 100;
-  display: none;
   margin-top: 40px;
   margin-bottom: 40px;
   padding-bottom: 50px;
@@ -62,6 +80,7 @@
 
   &__input {
     display: none;
+
   }
 
   &__label {
@@ -78,10 +97,6 @@
 
     &:hover {
       border: 2px solid $grey;
-    }
-
-    &:active {
-      border: 2px solid $downy;
     }
 
     &--size {
@@ -109,17 +124,14 @@
   }
 }
 
-.modal-show {
-  display: flex;
+#size-s:checked + .modal-order__label[for="size-s"] {
+  border: 2px solid $downy;
 }
 
-.modal__overlay {
-  position: absolute;
-  z-index: 100;
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(#ffffff, 0.9);
-  cursor: pointer;
-  transform: translate(-50%, -50%);
+#size-m:checked + .modal-order__label[for="size-m"] {
+  border: 2px solid $downy;
+}
+
+#size-L:checked + .modal-order__label[for="size-L"] {
+  border: 2px solid $downy;
 }
