--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,7 @@
 @import "blocks/product-menu.scss";
 @import "blocks/product-stock.scss";
 @import "blocks/week-product.scss";
+@import "blocks/info-table.scss";
 @import "blocks/advantages.scss";
 @import "blocks/reviews.scss";
 @import "blocks/contacts.scss";
