--- a/sass/blocks/coopyright.scss
+++ b/sass/blocks/coopyright.scss
@@ -8,7 +8,6 @@
 
   &__link {
     display: flex;
-
     align-items: center;
     padding-right: 20px;
     padding-left: 40px;
@@ -45,7 +44,7 @@
 
     @media (min-width: $desktop-width) {
       padding-right: 29px;
-      padding-bottom: 10px;
+      padding-bottom: 6;
     }
   }
 
