--- a/sass/blocks/modal-order.scss
+++ b/sass/blocks/modal-order.scss
@@ -19,13 +19,14 @@
   width: 100%;
   height: 100%;
   background-color: rgba($white, 0.9);
+  cursor: pointer;
 }
 
 .modal-order {
   position: fixed;
   top: 50%;
   left: 50%;
-  z-index: 100;
+  z-index: 101;
   margin-top: 40px;
   margin-bottom: 40px;
   padding-bottom: 50px;
