--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -33,7 +33,7 @@
         left: 0;
         width: 768px;
         height: 17px;
-        background-image: url(../img/bg-zigzag-line.svg);
+        background-image: url("../img/bg-zigzag-line.svg");
         background-size: auto 17px;
         background-repeat: repeat-x;
         content: "";
